[package]
name = "build-progress"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "bp"

[dependencies]
log = { version = "0.4.6", features = ["std"] }
structopt = "0.2.15"
termcolor = "1.0.4"
failure = "0.1.5"
crypto-hash = "0.3.3"
hex = "0.3.2"
indicatif = "0.11.0"
console = "0.7.5"
serde = { version = "1.0.90", features = ["derive"] }
json = { package = "serde_json", version = "1.0.39" }
base64 = "0.10.1"
futures = "0.1.26"
tokio-io = "0.1.12"
tokio-process = "0.2.3"
tokio = "1.18.5"
dirs = "1.0.5"
fs2 = "0.4.3"
lazy_static = "1.3.0"
toml = "0.5.0"
tokio-timer = "0.2.10"
